# RPiCameraMultiplexer

./: .gitignore  .gitignore~  CMakeLists.txt  README.md  main.cpp  make.sh
scripts/: BuildAndRun.sh
src/: main.cpp
